# gemmcomparsion

./: CMakeLists.txt  README.md  benchmark_results_acc.txt  benchmark_results_cuda.txt  benchmark_results_omp.txt  benchmark_results_serial.txt  benchmark_summary.csv  bkp  build.sh  gemm_cuda.cpp  gemm_cuda_kernel.cu  gemm_omp.cpp  main.cpp  main_cuda.cpp  makefile  module.sh  process.py
cnnn/: main.cpp  makefile
cnnn/include/: gemm.hpp
cublas_degemm/: CMakeLists.txt  dgemm_cublas  dgemm_cublas.bkp  dgemm_cublas.cpp  makefile  performance.h
cuda/: bkp  gemm_cuda.cpp  gemm_cuda_kernel.cu  main_cuda.cpp  makefile
cuda/include/: gemm.hpp  gemm_cublas.hpp  gemm_cuda.hpp
cuda/multiplekernel/: dgemm_cuda  dgemm_cuda.cu  dgemm_cuda.txt  note.md
cuda/multiplekernel/cuda/: makefile
cuda/multiplekernel/cuda/multipleKernel/includes/: performance_result.h
cuda/multiplekernel/cuda/multipleKernel/src/: dgemm_cuda.cu  matrix_mul_kernel1.cu
cuda/multiplekernel/includes/: performance_result.h  time_utils.h
cuda/multiplekernel/multipleKernel/: CMakeLists.txt  dgemm_cuda  makefile
cuda/multiplekernel/multipleKernel/includes/: error_checking.h  matrix_mul_kernel.h  performance_utils.h
cuda/multiplekernel/multipleKernel/src/: matrix_mul_kernel2.cu
directives/: bkp  main.cpp  newbkp
include/: aid-cuda.cuh  gemm_cuda.hpp  timing_utils.hpp  utility.cuh  utility.h
myenv/: pyvenv.cfg
src/: gemm_acc.cpp  gemm_cuda.cpp  gemm_cuda_kernel.cu  gemm_omp.cpp  gemm_serial.cpp
sycl/: gemm_serial  gemm_sycl  gemm_sycl.cpp  makefile
sycl/include/: timing_utils.hpp  utility.h
